# Archivator

./: README.md  pyproject.toml
python/archivator/cli/: main.py
python/archivator/config/: projects.json
python/archivator/core/: paths.py
python/archivator/ui/: main_window.py
python/archivator/ui/dialogs/: add_project_dialog.py  project_settings_dialog.py
python/archivator/ui/utils/: drop_helper.py
python/archivator/ui/view/: interface.ui
python/archivator/ui/widgets/: add_project_card.py  project_card.py
python/cli/: main.py
python/config/: projects.json
python/core/: collector.py  exceptions.py  project.py  registry.py  resolver.py  trash_manager.py
python/core/trash/: trash_manager.py
python/services/: archive_service.py  path_validator.py
python/ui/: app.py  main_window.py  widgets.py
python/ui/dialogs/: add_project_dialog.py  project_settings_dialog.py  recover_trash_dialog.py
python/ui/layouts/: __init__.py
python/ui/view/: interface.ui
python/ui/widgets/: __init__.py  project_card.py
