[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "archivator"
version = "0.1.4"
description = "Project-based archive and trash manager for VFX pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
]
license = "MIT"
authors = [
    { name = "Claire Benes" }
]
keywords = [
    "vfx",
    "pipeline",
    "storage",
    "archive",
    "trash",
    "prism",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/ClaireBenes/Archivator"
Repository = "https://github.com/ClaireBenes/Archivator"
Issues = "https://github.com/ClaireBenes/Archivator/issues"
PyPI = "https://pypi.org/project/archivator/"

[project.scripts]
archivator = "archivator.ui.app:main"
archivator-cli = "archivator.cli.main:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
archivator = [
    "ui/view/*.ui",
    "ui/resources/*",
]